# GeminiChatAndNotes

./: .gitignore  README.md  pyproject.toml
src/: GemApp2o.py  gemini_chat_orm.py  temps.py
src/pages/: ChatManage.py  History.py
src/sqlite_db/: chat.db
src/sqlite_db/test/: test2.py
